--- a/package.json
+++ b/package.json
@@ -17,17 +17,6 @@
   },
   "license": "MIT",
   "packageManager": "yarn@3.6.1",
-  "devDependencies": {
-    "@parcel/packager-ts": "2.9.3",
-    "@parcel/transformer-glsl": "2.9.3",
-    "@parcel/transformer-sass": "2.9.3",
-    "@parcel/transformer-typescript-types": "2.9.3",
-    "gitmoji-changelog": "^2.3.0",
-    "parcel": "^2.9.3",
-    "process": "^0.11.10",
-    "release-it": "^16.1.0",
-    "typescript": ">=3.0.0"
-  },
   "source": "src/index.ts",
   "main": "dist/main.js",
   "module": "dist/module.js",
@@ -41,14 +30,21 @@
     "web:build": "parcel build --target web"
   },
   "dependencies": {
-    "glsl-canvas-js": "^0.2.9",
+    "glsl-canvas-js": "^0.2.9"
+  },
+  "devDependencies": {
+    "@parcel/packager-ts": "2.9.3",
+    "@parcel/transformer-glsl": "2.9.3",
+    "@parcel/transformer-sass": "2.9.3",
+    "@parcel/transformer-typescript-types": "2.9.3",
+    "gitmoji-changelog": "^2.3.0",
+    "parcel": "^2.9.3",
+    "process": "^0.11.10",
+    "release-it": "^16.1.0",
+    "typescript": ">=3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-highlight": "^0.15.0"
-  },
-  "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
   },
   "targets": {
     "package": {
